force-app/main/default/objects/MUSW__License2__c/MUSW__License2__c.object-meta.xml
<CustomObject>
    <customHelp>MUSW__HelpInterface</customHelp>
    <description>Authorization for a person or facility to perform a function for a period of time: business, profession or privilege</description>
    <label>License</label>
    <nameField>
        <label>Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Licenses</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>