force-app/main/default/objects/MUSW__License2__c/fields/MUSW__Address__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to address to which the license is associated with.</description>
    <inlineHelpText>Provide the address that this license is associated with.</inlineHelpText>
    <label>Address</label>
    <referenceTo>MUSW__Address__c</referenceTo>
    <relationshipLabel>Licenses</relationshipLabel>
    <relationshipName>Licenses</relationshipName>
    <type>Lookup</type>
</CustomField>