force-app/main/default/objects/MUSW__License2__c/fields/MUSW__Alert_Indicator__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Alert_Indicator__c</fullName>
    <description>Stoplight image displays green (0), yellow (1), or red (2), depending on the value of the alert code field.</description>
    <formula>HYPERLINK(&quot;/apex/musw__TaskAlert?id=&quot;+ Id, IMAGE(
CASE( MUSW__AlertCode__c,
0, &quot;/img/samples/light_green.gif&quot;,
1, &quot;/img/samples/light_yellow.gif&quot;,
2, &quot;/img/samples/light_red.gif&quot;,
&quot;https://letterbatch.mybasicgov.com/img/light_off.gif&quot;),
&quot;none&quot;), &quot;_top&quot;) + IF(MUSW__Parcel__c != null, &quot; Par: &quot; + HYPERLINK(&quot;/apex/musw__TaskAlert?id=&quot;+ MUSW__Parcel__c, IMAGE(
CASE( MUSW__Parcel__r.MUSW__AlertCode__c,
0, &quot;/img/samples/light_green.gif&quot;,
1, &quot;/img/samples/light_yellow.gif&quot;,
2, &quot;/img/samples/light_red.gif&quot;,
&quot;https://letterbatch.mybasicgov.com/img/light_off.gif&quot;),
&quot;none&quot;), &quot;_top&quot;),&quot;&quot;)</formula>
    <label>Alert</label>
    <type>Text</type>
</CustomField>