force-app/main/default/objects/MUSW__License2__c/fields/MUSW__AlertCode__c.field-meta.xml
<CustomField>
    <fullName>MUSW__AlertCode__c</fullName>
    <description>Numeric value that determines the alert indicator color. Updated by AlertParentUpdate trigger on the Task object.</description>
    <label>Alert Code</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>