force-app/main/default/objects/MUSW__License2__c/fields/MUSW__Applicant_is_Licensee__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Applicant_is_Licensee__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If this field is true, LicensePrimaryUpdates trigger sets the Primary Licensee Field (lookup) to the Id of the applicant&apos;s account.</description>
    <label>Applicant is Licensee</label>
    <type>Checkbox</type>
</CustomField>