force-app/main/default/objects/MUSW__License2__c/fields/MUSW__BG_Responsible_Party_Type__c.field-meta.xml
<CustomField>
    <fullName>MUSW__BG_Responsible_Party_Type__c</fullName>
    <inlineHelpText>What type of party is responsible for all fee payments. Determines what cart the fees belong in. If not specified, default is Contact.</inlineHelpText>
    <label>Responsible Party Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Contact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>