force-app/main/default/objects/MUSW__License2__c/fields/MUSW__Class__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Class__c</fullName>
    <description>Descriptor for License.</description>
    <inlineHelpText>classification or function/business/privilege permitted</inlineHelpText>
    <label>Class</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Liquor</fullName>
            </value>
            <value>
                <fullName>Rental</fullName>
            </value>
            <value>
                <fullName>Certification</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>