force-app/main/default/objects/MUSW__License2__c/fields/MUSW__Designation__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Designation__c</fullName>
    <description>Deprecated</description>
    <inlineHelpText>distinguishing marker, special identifier, or specific permission</inlineHelpText>
    <label>Designation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Potentially Dangerous</fullName>
            </value>
            <value>
                <fullName>Viscous</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>