force-app/main/default/objects/MUSW__License2__c/fields/MUSW__Issued_Number__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Issued_Number__c</fullName>
    <description>Filled in when a permanent sequence number is issued. It prevents subsequent triggering of the sequence number code.</description>
    <label>Issued No.</label>
    <length>15</length>
    <type>Text</type>
</CustomField>