force-app/main/default/objects/MUSW__License2__c/fields/MUSW__Phase__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Phase__c</fullName>
    <label>Phase</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MUSW__License_Phases</valueSetName>
    </valueSet>
</CustomField>