force-app/main/default/objects/MUSW__License2__c/fields/MUSW__Primary_Licensee__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Primary_Licensee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Account lookup for licenses not held by individuals.</description>
    <label>Licensee</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Licenses as Primary Licensee</relationshipLabel>
    <relationshipName>License2s</relationshipName>
    <type>Lookup</type>
</CustomField>