force-app/main/default/objects/MUSW__License2__c/fields/MUSW__Total_Billable_Payments__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Total_Billable_Payments__c</fullName>
    <description>Total amount of billable payment related to a license.</description>
    <label>Total Billable Payments</label>
    <precision>13</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>