force-app/main/default/objects/MUSW__License2__c/fields/MUSW__Total_Payments__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Total_Payments__c</fullName>
    <description>Sum of the Amount field of all Payments related to this record.</description>
    <label>Total Payments</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>