force-app/main/default/objects/MUSW__License2__c/fields/MUSW__Type__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Type__c</fullName>
    <description>Primary descriptor of the License.</description>
    <label>Type (Deprecated)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Business</fullName>
            </value>
            <value>
                <fullName>Rental</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>