force-app/main/default/objects/MUSW__License2__c/fields/Square_Footage__c.field-meta.xml
<CustomField>
    <fullName>Square_Footage__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Square Footage</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>