force-app/main/default/objects/MUSW__License2__c/validationRules/MUSW__Renewal_Requires_Expiration_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>MUSW__Renewal_Requires_Expiration_Date</fullName>
    <active>false</active>
    <description>Before renewing, a license is first required to be expired</description>
    <errorConditionFormula>AND(NOT(ISNULL(MUSW__Renewal_Date__c)), ISNULL(MUSW__Expiration_Date__c ))</errorConditionFormula>
    <errorMessage>License must be expiring before being renewed. Enter expiration date.</errorMessage>
</ValidationRule>