force-app/main/default/objects/MUSW__License2__c/listViews/MUSW__All.listView-meta.xml
<ListView>
    <fullName>MUSW__All</fullName>
    <columns>NAME</columns>
    <columns>MUSW__Type__c</columns>
    <columns>MUSW__Status__c</columns>
    <columns>MUSW__Primary_Licensee__c</columns>
    <columns>MUSW__Expiration_Date__c</columns>
    <columns>MUSW__Alert_Indicator__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>